header and sidebar was fixed

--- a/easy_ui/public/js/frappe/ui/page.html
+++ b/easy_ui/public/js/frappe/ui/page.html
@@ -1,7 +1,7 @@
 
 <div class="col-lg-2 layout-side-section fixed-top layout-vertical-nav "></div>
 
-<div class="container page-body  " style=" padding-top: 1%; margin-right: 7%; ">
+<div class="container page-body  " style=" padding-top: 1%; ">
 
 	<div class="page-toolbar hide">
 		
