--- a/easy_ui/www/app.html
+++ b/easy_ui/www/app.html
@@ -60,7 +60,7 @@ data-template="vertical-menu-template">
 				  © <script>
 				  document.write(new Date().getFullYear())
 		  
-				  </script>2024, made with ❤️ by <a href="https://pixinvent.com" target="_blank" class="footer-link text-primary fw-medium">Pixinvent</a>
+				  </script>, made with ❤️ in <a href="https://yooltech.com/" target="_blank" class="footer-link text-primary fw-medium">Hamar</a>
 				</div>
 				<div class="d-none d-lg-inline-block">
 				  
