bringing frappe sidebar to the new theme

--- a/easy_ui/public/js/frappe/ui/page.html
+++ b/easy_ui/public/js/frappe/ui/page.html
@@ -21,7 +21,7 @@
 							<h3 class="ellipsis title-text"></h3>
 							<span class="indicator-pill whitespace-nowrap"></span>
 						</div>
-						<div class="ellipsis sub-heading hide text-muted"></div>
+						<div class="ellipsis sub-heading hide1 text-muted"></div>
 					</div>
 					<button class="btn btn-default more-button hide">
 						<svg class="icon icon-sm">
@@ -69,11 +69,26 @@
 		</div>
 	</div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="container page-body">
 	<div class="page-toolbar hide">
 		<div class="container">
 		</div>
 	</div>
+
+	
 	<div class="page-wrapper">
 		<div class="page-content">
 			<div class="workflow-button-area btn-group pull-right hide"></div>
