--- a/easy_ui/www/login.html
+++ b/easy_ui/www/login.html
@@ -233,7 +233,7 @@
                             <form class="form-signin form-login" role="form">
                                 {{ email_login_body() }}
                             </form>
-                            <div class="social-logins text-center">
+                            <!-- <div class="social-logins text-center">
                                 {% if not disable_user_pass_login or (ldap_settings and ldap_settings.enabled) %}
                                 <p class="text-muted login-divider">{{ _("or") }}</p>
                                 {% endif %}
@@ -259,7 +259,7 @@
                                     </div>
                                 </div>
                                 {% endif %}
-                            </div>
+                            </div> -->
                         </div>
                         {% else %}
                             {{ email_login_body() }}
@@ -329,21 +329,7 @@
                     
 					<div class="email-field">
 						<input type="email" id="forgot_email" class="form-control"
-                        style="
-            display: block;
-    width: 100%;
-    padding: -1.411rem 1.875rem;
-    font-size: 0.9375rem;
-    font-weight: 400;
-
-    height: 35px;
-    color: #6f6b7d;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #dbdade;
-    appearance: none;
-    border-radius: 0.375rem;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;"
+        style="height: 35px;"
             
 							placeholder="{{ _('Email Address') }}" required autofocus autocomplete="username">
 						<svg class="field-icon email-icon" width="20" height="20" viewBox="0 0 20 20" fill="none"
